--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "nlp_tfidf"]
 	path = nlp_tfidf
 	url = https://github.com/rmarkbio/nlp_tfidf.git
+[submodule "azure_database_tools"]
+	path = azure_database_tools
+	url = https://github.com/rmarkbio/azure_database_tools.git
